<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YiReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cloud_read">云阅读</string>
    <string name="discover">发现</string>
    <string name="read_group">阅读圈</string>
    <string name="me">我</string>
    <string name="recommend">推荐</string>
    <string name="subscription">订阅</string>
    <string name="bookrack">书架</string>
    <string name="journal">杂志</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <bool name="default_circle_indicator_centered">true</bool>

    <color name="default_circle_indicator_fill_color">#FFFFFFFF</color>
    <color name="default_circle_indicator_page_color">#00000000</color>

    <integer name="default_circle_indicator_orientation">0</integer>

    <dimen name="default_circle_indicator_radius">3dp</dimen>

    <bool name="default_circle_indicator_snap">false</bool>

    <color name="default_circle_indicator_stroke_color">#FFDDDDDD</color>

    <dimen name="default_circle_indicator_stroke_width">1dp</dimen>
    

</resources>